# openrank-tee

./: .env.example  .env.public  .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.computer.yml  docker-compose.local.yml  docker-compose.yml  foundry.toml  rust-toolchain.toml
.compute-tee/context/: devnet.yaml  testnet.yaml
.compute-tee/scripts/: attestation.sh  describe.sh  keys.sh  logs.sh
.devkit/: config.yaml
.devkit/compute-tee/contracts/: .gitignore  Makefile  README.md  foundry.toml
.devkit/compute-tee/contracts/script/: CreateAVS.s.sol  Deploy.s.sol
.devkit/compute-tee/contracts/script/config/: deploy.json
.devkit/compute-tee/contracts/script/output/devnet/: deploy_avs_l1_output.json  deploy_l1_output.json
.devkit/compute-tee/contracts/script/output/testnet/: deploy_avs_l1_output.json
.devkit/compute-tee/contracts/src/: TEEAVSFactory.sol  TEEAVSRegistrar.sol  TEEOperator.sol
.devkit/compute-tee/contracts/src/base/: AVSRegistrar.sol  AVSRegistrarAsIdentifier.sol  TEEAVSFactoryStorage.sol  TEEOperatorStorage.sol
.devkit/compute-tee/contracts/src/interfaces/: ITEEAVSFactory.sol  ITEEOperator.sol
.devkit/compute-tee/contracts/test/: TEEAVSFactory.t.sol
.devkit/scripts/: build  call  deployL1Contracts  deployL2Contracts  generate-mnemonic  getOperatorRegistrationMetadata  getOperatorSets  init  release  run  test  upgrade
.devkit/scripts/helpers/: helpers.sh
.github/workflows/: release.yml
app/: .env.example  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
app/src/: challenger.rs  computer.rs  error.rs  index.ts  lib.rs  main.rs  server.rs  sol.rs
broadcast/AllowlistComputer.s.sol/11155111/: run-1760462701.json
broadcast/DeployOpenRank.s.sol/11155111/: run-1755699697.json  run-1755786253.json  run-1756911849.json  run-1756996366.json
common/: Cargo.toml
common/src/: eigenda.rs  lib.rs  logs.rs  runner.rs
common/src/algos/: et.rs  mod.rs  sr.rs
common/src/merkle/: fixed.rs  incremental.rs  mod.rs
common/src/runners/: compute_runner.rs  mod.rs  verification_runner.rs
common/src/tx/: trust.rs
config/: config.yaml
config/contexts/: devnet.yaml
contracts/: foundry.toml
contracts/outputs/testnet/: teeAVSRegistrar.json
contracts/script/: AllowlistComputer.s.sol  DeployOpenRank.s.sol  RandomnessBeacon.s.sol
contracts/src/: IOpenRankManager.sol  MerklePathVerifier.sol  OpenRankManager.sol  OpenRankManagerStorage.sol  RandomnessBeacon.sol
contracts/test/: OpenRankManager.t.sol
docs/: developing_an_app.md  managing_instances.md
output/: tee-keys-testnet.yaml
scripts/: allowlist.sh  deploy.sh  fund_tee.sh  install-auto.sh  install-static.sh  install.sh  publish.sh  publish_compute_node.sh  release.sh  uninstall.sh  verify.sh
sdk/: Cargo.toml  README.md  build.rs
sdk/contracts/OpenRankManager.sol/: OpenRankManager.json
sdk/contracts/ReexecutionEndpoint.sol/: ReexecutionEndpoint.json
sdk/src/: actions.rs  main.rs  sol.rs
