[workspace]
resolver = "2"
members = ["app", "sdk", "common"]

[workspace.package]
version = "0.2.6"
authors = ["Filip Lazović <filip@karma3labs.com>"]
edition = "2021"
license = "MIT"
rust-version = "1.85"
homepage = "https://github.com/openrankprotocol/openrank-tee"
repository = "https://github.com/openrankprotocol/openrank-tee"

[workspace.dependencies]
openrank-common = { path = "common", version = "0.2.6" }

rand = "0.9.1"
alloy = "0.13.0"
alloy-primitives = "0.8.8"
alloy-rlp = "0.3.5"
alloy-rlp-derive = "0.3.5"
alloy-sol-types = "1.1.0"
tracing = "0.1.37"
tracing-subscriber = "0.3"
serde = "1.0"
serde_json = "1.0"
sha3 = "0.10.8"
k256 = "0.13.3"
thiserror = "1.0.63"
clap = "4.5"
getset = "0.1.3"
rayon = "1.10"
time = "0.3.37"
aws-sdk-s3 = "1.80.0"
aws-config = "1.6.1"
reqwest = "0.12"
tokio = "1.44.2"
futures-util = "0.3"
dotenv = "0.15.0"
aws-credential-types = "1.2.2"
csv = "1.3.1"
base64 = "0.22.1"
rustls = ">=0.23.x"
dotenv_codegen = "0.15.0"
tonic = "0.10"
tonic-reflection = "0.10"
tonic-build = "0.10"
prost = "0.12"
prost-build = "0.12"
prost-types = "0.12"
flate2 = "1.0"
curl = "0.4.49"
tar = "0.4"
