[package]
name = "openrank-app"
description = "OpenRank app"
rust-version.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
openrank-common = { workspace = true }

rand = { workspace = true }
thiserror = { workspace = true }
alloy = { workspace = true, features = ["signer-mnemonic", "provider-ws"] }
alloy-rlp = { workspace = true }
alloy-sol-types = { workspace = true }
clap = { workspace = true, features = ["derive"] }
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true, features = ["behavior-version-latest"] }
aws-credential-types = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
futures-util = { workspace = true }
dotenv = { workspace = true }
sha3 = { workspace = true }
csv = { workspace = true }
base64 = { workspace = true }
rustls = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

openssl = { version = "0.10", features = ["vendored"] }
