[package]
name = "openrank-common"
description = "Common library for OpenRank codebase"
rust-version.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
alloy = { workspace = true }
alloy-rlp = { workspace = true }
alloy-rlp-derive = { workspace = true }
getset = { workspace = true }
alloy-primitives = { workspace = true, features = ["serde", "rlp"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha3 = { workspace = true }
k256 = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "time"] }
time = { workspace = true, features = ["macros"] }
reqwest = { workspace = true, features = ["stream"] }

[dev-dependencies]
rand = "0.8.5"
