[package]
name = "openrank"
description = "CLI for OpenRank AVS"
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
include = ["src/**", "contracts/**", "build.rs"]

[dependencies]
openrank-common = { workspace = true }

alloy = { workspace = true, features = ["signer-mnemonic", "provider-ws"] }
alloy-rlp = { workspace = true }
clap = { workspace = true, features = ["derive"] }
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true, features = ["behavior-version-latest"] }
aws-credential-types = { workspace = true, features = [
    "hardcoded-credentials",
] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
futures-util = { workspace = true }
tracing = { workspace = true }
dotenv = { workspace = true }
sha3 = { workspace = true }
csv = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rustls = { workspace = true }
flate2 = { workspace = true }
curl = { workspace = true }
tar = { workspace = true }

# OpenSSL with vendored feature for cross-compilation (except Windows)
[target.'cfg(not(target_os = "windows"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

# Use system OpenSSL for Windows to avoid Perl compilation issues
[target.'cfg(target_os = "windows")'.dependencies]
openssl = { version = "0.10" }
